# test

./: README.md  pyproject.toml
tictactoe_xm2312/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
tictactoe_xm2312/docs/: Makefile  conf.py  example.ipynb  make.bat
tictactoe_xm2312/src/tictactoe_xm2312/: __init__.py  tictactoe_xm2312.py
tictactoe_xm2312/tests/: test_tictactoe_xm2312.py
