[tool.poetry]
name = "tictactoe-xm2312"
version = "0.1.0"
description = "we are adding the tictactoe functions"
authors = ["XuanYing Mao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
