[tool.poetry]
name = "tictactoe-xm2312"
version = "0.1.2"
description = "we are adding the tictactoe functions"
authors = ["XuanYing Mao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.3"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "tictactoe_xm2312", from = "src" }
]
