[tool.poetry]
name = "tictactoe_xm2312"
version = "0.1.0"
description = "we are adding the tictactoe functions"
authors = ["XuanYing Mao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
